compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__inline_function.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 261
expression: "\n@external(javascript, \"blah\", \"(x => x)\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "blah", "(x => x)")
pub fn one(x: Int) -> Int {
  1
}


----- ERROR
error: Invalid JavaScript function
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn one(x: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The function `one` has an external JavaScript implementation but the
function name `(x => x)` is not valid.
